--- a/templetes/account/base.html
+++ b/templetes/account/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Octal Cargo</title>
+<title>Freight R</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -52,18 +52,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="row top_header pt-3">
 			<div class="col-lg-3 offset-lg-7 col-md-5 offset-md-3 col-sm-6 col-7 offset-sm-2 top-grid">
 				<span class="fa ml-3 fa-envelope-open-o"></span>
-				<p class=""> <a href="mailto:info@example.com">info@octalcargos.com</a> <span class="block">Contact Support</span> </p>
+				<p class=""> <a href="mailto:info@example.com">info@FreightR.us</a> <span class="block">Contact Support</span> </p>
 			</div>
 			<div class="col-lg-2 col-md-4 col-sm-4 col-5 top-grid pl-0">
 				<span class="fa ml-3 fa-phone"></span>
-				<p class=""> (260) 623-4353 <span class="block">24/7 Helpline</span> </p>
+				<p class=""> (813) 693-2568 <span class="block">24/7 Helpline</span> </p>
 			</div>
 		</div>
 		<!-- top header -->
 		<!-- nav -->
 		<nav class="pt-2">
 			<div id="logo">
-				<h1> <a href="{% url 'indexurl:index' %}"><span class="fa fa-ship"></span> Octal Cargos</a></h1>
+				<h1> <a href="{% url 'indexurl:index' %}"><span class="fa fa-ship"></span> FreightR</a></h1>
 			</div>
 			<label for="drop" class="toggle">Menu</label>
 			<input type="checkbox" id="drop" />
@@ -71,7 +71,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<li class="mr-lg-4 mr-2 active"><a href="{% url 'indexurl:index' %}">Home</a></li>
 				<li class="mr-lg-4 mr-2"><a href="{% url 'indexurl:about' %}">About Us</a></li>
 				<li class="mr-lg-4 mr-2"><a href="{% url 'indexurl:services' %}">Services</a></li>
-				<li class="mr-lg-4 mr-2"><a href="{% url 'indexurl:track' %}">Track</a></li>
+				<li class="mr-lg-4 mr-2"><a href="{% url 'indexurl:track' %}">Tracking</a></li>
 				<li class="mr-lg-4 mr-2"><a href="{% url 'indexurl:contact' %}">Contact</a></li>
 				<li class=""><a href="#subscribe">Subscribe</a></li>
 			</ul>
@@ -94,7 +94,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<p>Call us, we are 24/7 Helpline</p>
 			</div>
 			<div class="col-sm-6 text-sm-right mt-sm-0 mt-3">
-				<h3><span class="fa fa-phone" aria-hidden="true"></span> (260) 623-4353</h3>
+				<h3><span class="fa fa-phone" aria-hidden="true"></span> (813) 693-2568</h3>
 			</div>
 		</div>
 	</div>
@@ -104,41 +104,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--footer -->
 <!-- modal -->
  <!-- Modal -->
- <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-	<div class="modal-dialog modal-dialog-centered" role="document">
-	  <div class="modal-content rounded-0">
-		<div class="modal-body bg-image overlay" style="background-image: url('images/hero_1.jpg'); background-color: blue;">
-
-		  <div class="line px-3 to-front">
-			<div class="row align-items-center">
-			  <div class="col logo">
-				<a href="#"><img src="{% static 'images/google-drive.svg' %}" alt="Image" class="img-fluid"></a>
-			  </div>
-			  <div class="col-md-8 text-center">
-				<h2>Exclusive Offer</h2>
-			  </div>
-			  <div class="col text-right">
-				<a href="#" class="close-btn" data-dismiss="modal" aria-label="Close">
-				  <span aria-hidden="true"><span class="icon-close2"></span></span>
-				</a>
-			  </div>
-			</div>
-		  </div>
-		  <div class="p-4 to-front">
-			<div class="text-center">
-			  <h3>Get a free a Ebook</h3>
-			  <p class="mb-4">All their equipment and instruments are alive. The sky was cloudless and of a deep dark blue. </p>
-			  <form action="#" class="d-flex mb-4">
-				<input type="email" class="form-control mr-3" placeholder="Enter your email address">
-				<input type="submit" class="btn btn-primary" value="Subscribe">
-			  </form>
-			  <p class="mb-0 cancel"><a href="#" data-dismiss="modal">Maybe later</a></p>
-			</div>
-		  </div>
-		</div>
-	  </div>
-	</div>
-  </div>
 <div class="footer footer_w3layouts_section_1its py-5" id="subscribe">
 	<div class="container pt-sm-4">
 		<div class="row footer-grid">
@@ -147,8 +112,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<h3>Who we are</h3>
 				</div>
 				<div class="footer-text">
-					<p>Octal Cargos has rapidly grown into a global brand, recognized for its customized services and innovative products. Listed on the United State Financial Market (USFM), 
-						Octal Cargos is centrally located at the crossroads between East and West, which allows us to provide customized logistics solutions anywhere in the world effectively and reach more businesses and consumers regionally and globally.</p>
+					<p>FreightR has rapidly grown into a global brand, recognized for its customized services and innovative products. Listed on the United State Financial Market (USFM), 
+						FreightR is centrally located at the crossroads between East and West, which allows us to provide customized logistics solutions anywhere in the world effectively and reach more businesses and consumers regionally and globally.</p>
 					<ul class="social_section_1info">
 						<li><a href="#" class="w3_facebook"><i class="fa fa-facebook"></i></a></li>
 						<li><a href="#" class="w3_twitter"><i class="fa fa-twitter"></i></a></li>
@@ -185,95 +150,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="clearfix"></div>
 		</div>
 
-		<!-- GTranslate: https://gtranslate.io/ -->
-		<div class="translator">
-<a href="#" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;">
-
-<style type="text/css">
-a.gflag {vertical-align:middle;font-size:16px;padding:1px 0;background-repeat:no-repeat;background-image:url(//gtranslate.net/flags/16.png);}
-a.gflag img {border:0;}
-a.gflag:hover {background-image:url(//gtranslate.net/flags/16a.png);}
-#goog-gt-tt {display:none !important;}
-.goog-te-banner-frame {display:none !important;}
-.goog-te-menu-value:hover {text-decoration:none !important;}
-body {top:0 !important;}
-#google_translate_element2 {display:none!important;}
--->
-</style>
-
-<br />
-<select onchange="doGTranslate(this);">
-    <option value="">Select Language</option>
-    <option value="en|af">Afrikaans</option>
-    <option value="en|sq">Albanian</option>
-    <option value="en|ar">Arabic</option>
-    <option value="en|hy">Armenian</option>
-    <option value="en|az">Azerbaijani</option
-        ><option value="en|eu">Basque</option>
-        <option value="en|be">Belarusian</option>
-        <option value="en|bg">Bulgarian</option>
-        <option value="en|ca">Catalan</option>
-        <option value="en|zh-CN">Chinese (Simplified)</option>
-        <option value="en|zh-TW">Chinese (Traditional)</option>
-        <option value="en|hr">Croatian</option>
-        <option value="en|cs">Czech</option>
-        <option value="en|da">Danish</option>
-        <option value="en|nl">Dutch</option>
-        <option value="en|en">English</option>
-        <option value="en|et">Estonian</option>
-        <option value="en|tl">Filipino</option>
-        <option value="en|fi">Finnish</option>
-        <option value="en|fr">French</option>
-        <option value="en|gl">Galician</option>
-        <option value="en|ka">Georgian</option>
-        <option value="en|de">German</option>
-        <option value="en|el">Greek</option>
-        <option value="en|ht">Haitian Creole</option>
-        <option value="en|iw">Hebrew</option>
-        <option value="en|hi">Hindi</option>
-        <option value="en|hu">Hungarian</option>
-        <option value="en|is">Icelandic</option>
-        <option value="en|id">Indonesian</option>
-        <option value="en|ga">Irish</option>
-        <option value="en|it">Italian</option>
-        <option value="en|ja">Japanese</option>
-        <option value="en|ko">Korean</option>
-        <option value="en|lv">Latvian</option>
-        <option value="en|lt">Lithuanian</option>
-        <option value="en|mk">Macedonian</option>
-        <option value="en|ms">Malay</option
-            ><option value="en|mt">Maltese</option>
-            <option value="en|no">Norwegian</option>
-            <option value="en|fa">Persian</option>
-            <option value="en|pl">Polish</option>
-            <option value="en|pt">Portuguese</option>
-            <option value="en|ro">Romanian</option>
-            <option value="en|ru">Russian</option>
-            <option value="en|sr">Serbian</option>
-            <option value="en|sk">Slovak</option>
-            <option value="en|sl">Slovenian</option>
-            <option value="en|es">Spanish</option>
-            <option value="en|sw">Swahili</option>
-            <option value="en|sv">Swedish</option>
-            <option value="en|th">Thai</option>
-            <option value="en|tr">Turkish</option>
-            <option value="en|uk">Ukrainian</option>
-            <option value="en|ur">Urdu</option>
-            <option value="en|vi">Vietnamese</option>
-            <option value="en|cy">Welsh</option>
-            <option value="en|yi">Yiddish</option>
-            </select><div id="google_translate_element2"></div>
-<script type="text/javascript">
-function googleTranslateElementInit2() {new google.translate.TranslateElement({pageLanguage: 'en',autoDisplay: false}, 'google_translate_element2');}
-</script><script type="text/javascript" src="{% static 'https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2' %}"></script>
-
+		<div style="text-align: right;" id="google_translate_element"></div>
 
 <script type="text/javascript">
-/* <![CDATA[ */
-eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('6 7(a,b){n{4(2.9){3 c=2.9("o");c.p(b,f,f);a.q(c)}g{3 c=2.r();a.s(\'t\'+b,c)}}u(e){}}6 h(a){4(a.8)a=a.8;4(a==\'\')v;3 b=a.w(\'|\')[1];3 c;3 d=2.x(\'y\');z(3 i=0;i<d.5;i++)4(d[i].A==\'B-C-D\')c=d[i];4(2.j(\'k\')==E||2.j(\'k\').l.5==0||c.5==0||c.l.5==0){F(6(){h(a)},G)}g{c.8=b;7(c,\'m\');7(c,\'m\')}}',43,43,'||document|var|if|length|function|GTranslateFireEvent|value|createEvent||||||true|else|doGTranslate||getElementById|google_translate_element2|innerHTML|change|try|HTMLEvents|initEvent|dispatchEvent|createEventObject|fireEvent|on|catch|return|split|getElementsByTagName|select|for|className|goog|te|combo|null|setTimeout|500'.split('|'),0,{}))
-/* ]]> */
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
 </script>
-/* modal */
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+
 <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'js/popper.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
@@ -287,7 +174,7 @@ eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a
 		</div>
 		<!-- //move top -->
 		<div class="copyright">
-			<p>© 2019 Logistic. All Rights Reserved  </p>
+			<p>© 2001 Logistic. All Rights Reserved  </p>
 		</div>
 	</div>
 </div>
