--- a/templetes/account/services.html
+++ b/templetes/account/services.html
@@ -41,7 +41,7 @@
 						</div>
 						<div class="our-services-text">
 							<h4>Air Freight</h4>
-							<p>Octal Cargos can handle your airfreight needs. Our trained airfreight specialists can service your time-sensitive shipments to and from any place in the world.</p>
+							<p>FreightR can handle your airfreight needs. Our trained airfreight specialists can service your time-sensitive shipments to and from any place in the world.</p>
 						</div>
 					</div>
 				</div>
@@ -67,8 +67,8 @@
 							<span class="fa fa-truck" aria-hidden="true"></span>
 						</div>
 						<div class="our-services-text">
-							<h4>Land Freight</h4>
-							<p>Our extensive network of operators allows us to connect even the most complex terrain through land transportation.</p>
+							<h4>DOOR-TO-DOOR</h4>
+							<p>Our extensive network of operators allows us to connect even the most complex terrain through door-to-door delivery.</p>
 						</div>
 					</div>
 				</div>
@@ -91,49 +91,7 @@
 </section>
 <!-- //services -->
 
-<!--/Blog-Posts-->
-<!-- <section class="banner-bottom-w3layouts py-5" id="blog">
-	<div class="container">
-		<div class="inner-sec-w3ls py-lg-5 py-md-3">
-			/services-grids
-			<div class="row blog-sec">
-				<div class="col-lg-4 manager-img mb-lg-0 mb-4">
-					<h4 class="heading"> We help clients transport their goods safely.</h4>
-					<p class="mt-4">Integer pulvinar leo id viveerrra feugiat. Pellenttesque libero ut justo, semper at tempus vel, ultrices ipsum ligula. Nullae sollicit udin velit. semper at tempus vel.</p>
-					<img src="images/manager.jpg" alt="" class="img-fluid rounded-circle mt-3">
-					<img src="images/signature.jpg" alt="" class="img-fluid img1">
-				</div>
-				<div class="col-lg-4 col-md-6 about-in blog-grid-info text-left">
-					<div class="card img">
-						<div class="card-body img">
-							<img src="images/blog1.jpg" alt="" class="img-fluid">
-							<div class="blog-des mt-3">
-								<h5 class="card-title mt-4">Shipping Cargo Transport</h5>
-								<p class="card-text">Nulla eu elementum quam. Pellentesque consectetur magna purus, nec facilisis. semper at tempus vel, ipsum.
-								</p>
-								<a href="#"> Click More </a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 about-in blog-grid-info text-left mt-md-0 mt-5">
-					<div class="card img">
-						<div class="card-body img">
-							<img src="images/blog2.jpg" alt="" class="img-fluid">
-							<div class="blog-des mt-3">
-								<h5 class="card-title mt-4">Shipping Cargo Transport</h5>
-								<p class="card-text">Nulla eu elementum quam. Pellentesque consectetur magna purus, nec facilisis. semper at tempus vel, ipsum.
-								</p>
-								<a href="#"> Click More </a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section> -->
-<!--//Blog-Posts-->
+
 
 
 
