--- a/templetes/account/contact.html
+++ b/templetes/account/contact.html
@@ -15,10 +15,10 @@
 <section class="contact py-5 my-lg-5">
 	<h2 class="heading text-center mb-sm-5 mb-4"> Get In Touch </h2>
 	<div class="map">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47491.005288533226!2d-88.04112836481997!3d41.93181507965691!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fad7e1d6ddc3d%3A0xbd8ff504d27e8e63!2sAddison%2C+IL%2C+USA!5e0!3m2!1sen!2sin!4v1522131822507"></iframe>
+	<iframe src="https://maps.google.com/maps?q=7521%20NW%2052nd%20St%20Maimi,%20Florida&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 		<div class="main_grid_contact">
 			<div class="form" >
-				<div style="color: green; font-size: 20px">
+				<div style="color: green; font-size: 20px; font-weight: bolder;">
 					{% if messages %}
 					{% for message in messages %}
 					{{message}}
@@ -47,11 +47,11 @@
 			</div>
 			<div class="w3ls-contact">
 				<h3 class="text-capitalize mb-3">contact Information</h3>
-				<p class="">If you have any questions regarding the results of your shipment tracking results, please contact us.</p>
+				<p class="" style="font-weight: bold;">If you have any questions regarding the results of your shipment, please contact us. You can also make use of our life-chat for faster communication.</p>
 				<address>
-					<p class="mt-3"><span class="fa fa-map-marker"></span> 1380H 4th cross, Kmome St, NY 10002,<span> Canada.</span> </p>
-					<p class="my-2"><span class="fa fa-phone"></span> (260) 623-4353 </p>
-					<p class=""><span class="fa fa-envelope-open"></span> <a href="mailto:mail@example.com">mail@octalcargos.com</a> </p>
+					<p class="mt-3"><span class="fa fa-map-marker"></span>7521 NW 52nd St Maimi, Florida<span> USA.</span> </p>
+					<p class="my-2"><span class="fa fa-phone"></span> (813) 693-2568 ( </p>
+					<p class=""><span class="fa fa-envelope-open"></span> <a href="mailto:mail@example.com">info@FreightR.com</a> </p>
 				</address>
 			</div>
 		</div>
