--- a/templetes/account/track.html
+++ b/templetes/account/track.html
@@ -12,15 +12,17 @@
 <!-- inner banner -->
 
 
-
+<section>
 	<div class="map">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47491.005288533226!2d-88.04112836481997!3d41.93181507965691!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fad7e1d6ddc3d%3A0xbd8ff504d27e8e63!2sAddison%2C+IL%2C+USA!5e0!3m2!1sen!2sin!4v1522131822507"></iframe>
+		<iframe src="https://maps.google.com/maps?q=7521%20NW%2052nd%20St%20Maimi,%20Florida&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>		
 		<div class="main_grid_contact">
 			<div class="form">
 				<h3 class="text-capitalize mb-2">Enter Your Tracking Number</h3>
-				<form action="#" method="post">
+				<form action="" method="post">
+					{% csrf_token %}
+                     {% include 'messages.html' %}
 					<div class="input-group">
-						<input type="text" style="width: 100%;" class="margin5" name="name" placeholder="Tracking number" required="">
+						<input type="text" style="width: 100%;" class="margin5" name="id" placeholder="Tracking number" required="">
 					</div>
 					<div class="input-group1">
 						<button class="submit btn"  data-toggle="modal" data-target="#exampleModalCenter">Track </button>
