--- a/templetes/index/index.html
+++ b/templetes/index/index.html
@@ -2,39 +2,46 @@
 {% load static %}
 {% block content %}
 		
+<div class="inner-banner" id="home">
+	<div class="container">
+		
+	</div>	
+</div>
 <!-- banner -->
+
 <section class="banner position-relative" id="home">
 	<div class="container">
 		<div class="banner-text">
 			<div class="slider-info">
-				<div class="agileinfo-logo mt-lg-5">
-					<h2>Ship Anything <br> Around the World</h2>
+				<div class="agileinfo-logo mt-lg-0">
+					<h2>Ship Anything <br> Around the World </h2>
+					<h3>{% include 'messages.html' %}</h3>
 				</div>
 			</div>
 		</div>
 		<div class="choose text-center position-absolute d-lg-flex" style="margin-top: 10px;">
 			<div class="main_grid_contact">
 				<div class="form">
-					<h3 class="text-capitalize mb-2">Enter Your Tracking Number</h3>
-					<form action="" method="POST">
+					<h3 class="text-capitalize mb-2">Enter Your Tracking ID</h3>
+					<form action="" method="post">
 						{% csrf_token %}
 						<div class="input-group">
-							<input type="text" name="search" style="width: 100%;" class="margin5" name="name" placeholder="Tracking number" required="">
+							<input type="text" style="width: 100%;" class="margin5" name="id" placeholder="Tracking number" required="">
 						</div>
 						<div class="input-group1">
-							<button class="submit btn" data-toggle="modal" data-target="#exampleModalCenter">Track </button>
+							<button class="submit btn"  data-toggle="modal" data-target="#exampleModalCenter">Track </button>
 						</div>
 					</form>
 				</div>
 				<div class="w3ls-contact">
 					
-					<h3 class="text-capitalize mb-3">Tracking Details</h3>
-					<p class=""></a></p>
-					<!-- <address>
-						<p class="mt-3"><span class="fa fa-map-marker"></span> 1380H 4th cross, Kmome St, NY 10002,<span> Canada.</span> </p>
-						<p class="my-2"><span class="fa fa-phone"></span> (260) 623-4353</p>
-						<p class=""><span class="fa fa-envelope-open"></span> <a href="mailto:mail@example.com">mail@octalcargos.com</a> </p>
-					</address> -->
+					<h3 class="text-capitalize mb-1"><h3 style="text-decoration: underline;">HEAD OFFICE</h3>
+					<!-- <p class="" style="font-weight: bold; color:aqua">You can also contact us via live chat</p> -->
+					<address>
+						<p class="mt-3"><span class="fa fa-map-marker"></span> 7521 NW 52nd St <span> Maimi, Florida </span>United State </p>
+						<p class="my-2"><span class="fa fa-phone"></span> (813) 693-2568</p>
+						<p class=""><span class="fa fa-envelope-open"></span> <a href="mailto:mail@example.com">info@FreightR.us</a> </p>
+					</address>
 				</div>
 			</div>
 			<div class="clearfix"></div>
@@ -46,16 +53,18 @@
 
 <!-- about -->
 <section class="about py-5" id="how">
+	
 	<div class="container py-lg-5">
+		
 		<div class="row about-grids">
 			<div class="col-lg-6 about-left">
 				<img src="{% static './images/banner.jpg' %}" class="img-fluid">
 			</div>
 			<div class="col-lg-6 grid1 mt-lg-0 mt-4 pl-lg-5">
 				<h3 class="my-lg-4 mb-2">ABOUT</h3>
-				<p class="">Whether you have full container loads, dangerous goods, LCL or large over dimensional project cargo,Octal Cargos can arrange for transportation to and from any destination in the world as an NVOCC or a licensed forwarder.
+				<p class="">Whether you have full container loads, dangerous goods, LCL or large over dimensional project cargo, FreightR can arrange for transportation to and from any destination in the world as an NVOCC or a licensed forwarder.
 					With our own consolidation services, you can rely on timely and efficient service. Our experienced staff offer a full range of documentation including letters of credits, banking, insurance and consular legalization among others to assist with your export.</p>
-				<p class="mt-3">Through the use of our integrated track and trace system, Octal Cargos will follow up on the delivery of your orders, wherever your source in the world. With our network of offices and qualified partners around the world, we can handle all of your transportation needs.</p>
+				<p class="mt-3">Through the use of our integrated track and trace system, FreightR will follow up on the delivery of your orders, wherever your source in the world. With our network of offices and qualified partners around the world, we can handle all of your transportation needs.</p>
 			</div>
 		</div>
 	</div>
@@ -90,7 +99,7 @@
 						</div>
 						<div class="our-services-text">
 							<h4>Air Freight</h4>
-							<p>Octal Cargos can handle your airfreight needs. Our trained airfreight specialists can service your time-sensitive shipments to and from any place in the world.</p>
+							<p>FreightR can handle your airfreight needs. Our trained airfreight specialists can service your time-sensitive shipments to and from any place in the world.</p>
 						</div>
 					</div>
 				</div>
@@ -147,7 +156,7 @@
 		<div class="row stat-grids">
 			<div class="col-lg-5">
 				<h4 class="heading mb-3">Logistics Statistical growth</h4>
-				<p class="">Through over 250 international agents and offices the people at Octal Cargos are pulled together across all countries and divisions by one guiding principle, 
+				<p class="">Through over 250 international agents and offices the people at FreightR are pulled together across all countries and divisions by one guiding principle, 
 					that is to deliver value to the client.</p>
 			</div>
 			<div class="col-lg-6 offset-lg-1 stats-right">
@@ -195,49 +204,6 @@
 </section>
 <!-- //shipping -->
 
-<!--/Blog-Posts-->
-<!-- <section class="banner-bottom-w3layouts py-5" id="blog">
-	<div class="container">
-		<div class="inner-sec-w3ls py-lg-5 py-md-3">
-			/services-grids
-			<div class="row blog-sec">
-				<div class="col-lg-4 manager-img mb-lg-0 mb-4">
-					<h4 class="heading"> We help clients transport their goods safely.</h4>
-					<p class="mt-4">Integer pulvinar leo id viveerrra feugiat. Pellenttesque libero ut justo, semper at tempus vel, ultrices ipsum ligula. Nullae sollicit udin velit. semper at tempus vel.</p>
-					<img src="images/manager.jpg" alt="" class="img-fluid rounded-circle mt-3">
-					<img src="images/signature.jpg" alt="" class="img-fluid img1">
-				</div>
-				<div class="col-lg-4 col-md-6 about-in blog-grid-info text-left">
-					<div class="card img">
-						<div class="card-body img">
-							<img src="images/blog1.jpg" alt="" class="img-fluid">
-							<div class="blog-des mt-3">
-								<h5 class="card-title mt-4">Shipping Cargo Transport</h5>
-								<p class="card-text">Nulla eu elementum quam. Pellentesque consectetur magna purus, nec facilisis. semper at tempus vel, ipsum.
-								</p>
-								<a href="#"> Click More </a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 about-in blog-grid-info text-left mt-md-0 mt-5">
-					<div class="card img">
-						<div class="card-body img">
-							<img src="images/blog2.jpg" alt="" class="img-fluid">
-							<div class="blog-des mt-3">
-								<h5 class="card-title mt-4">Shipping Cargo Transport</h5>
-								<p class="card-text">Nulla eu elementum quam. Pellentesque consectetur magna purus, nec facilisis. semper at tempus vel, ipsum.
-								</p>
-								<a href="#"> Click More </a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section> -->
-<!--//Blog-Posts-->
 
 </body>
 {% endblock content %}
